objects/SVMXC__Stock_Transfer_Line__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to capture line items of a stock transfer.</description>
    <fields>
        <fullName>SVMXC__Additional_Information__c</fullName>
        <description>Any additional information relevant to this stock transfer line.</description>
        <inlineHelpText>Any additional information relevant to this stock transfer line.</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Posted_To_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this stock transfer record has been posted to inventory or not. This is set automatically.</description>
        <inlineHelpText>Indicates if this stock transfer record has been posted to inventory or not. This is set automatically.</inlineHelpText>
        <label>Posted To Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product. This is a lookup to an existing salesforce product record.</description>
        <inlineHelpText>Name of the product. This is a lookup to an existing salesforce product record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Stock_Transfer_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity_Transferred2__c</fullName>
        <description>Quantity transferred from source to destination location.</description>
        <inlineHelpText>Quantity transferred from source to destination location.</inlineHelpText>
        <label>Qty Transferred</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to control selection of a record in data list.</description>
        <inlineHelpText>Flag to control selection of a record in data list.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number_List__c</fullName>
        <description>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</description>
        <inlineHelpText>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</inlineHelpText>
        <label>Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stock_Transfer__c</fullName>
        <description>Reference to the original Stock Transfer transaction that impacted the stock.</description>
        <label>Stock Transfer</label>
        <referenceTo>SVMXC__Stock_Transfer__c</referenceTo>
        <relationshipLabel>Stock Transfer Lines</relationshipLabel>
        <relationshipName>Stock_Transfer_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transaction_Results__c</fullName>
        <description>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</description>
        <inlineHelpText>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</inlineHelpText>
        <label>Transaction Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_Price2__c</fullName>
        <description>Unit Price for Line Item.</description>
        <inlineHelpText>Unit Price for Line Item.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Use_Price_From_Pricebook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</description>
        <inlineHelpText>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</inlineHelpText>
        <label>Use Price From Pricebook</label>
        <type>Checkbox</type>
    </fields>
    <label>Stock Transfer Line</label>
    <nameField>
        <displayFormat>SXFRL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transfer Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SVMXC__SVMXC_ValidateQuantityChange</fullName>
        <active>true</active>
        <description>Transfer quantity cannot be changed for existing records.</description>
        <errorConditionFormula>AND (!ISNEW(),  ISCHANGED( SVMXC__Quantity_Transferred2__c))</errorConditionFormula>
        <errorDisplayField>SVMXC__Quantity_Transferred2__c</errorDisplayField>
        <errorMessage>Once entered, transfer quantity cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__SVMXC_ValidateTransferQuantity</fullName>
        <active>true</active>
        <description>Transfer quantity must be greater than zero.</description>
        <errorConditionFormula>( SVMXC__Quantity_Transferred2__c &lt;=0)</errorConditionFormula>
        <errorDisplayField>SVMXC__Quantity_Transferred2__c</errorDisplayField>
        <errorMessage>Quantity transferred should be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>